; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_tgt_lib.c_scsi_tgt_tsk_mgmt_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_tgt_lib.c_scsi_tgt_tsk_mgmt_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i32 }
%struct.scsi_lun = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"The task management request lost!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @scsi_tgt_tsk_mgmt_request(%struct.Scsi_Host* %0, i32 %1, i32 %2, i32 %3, %struct.scsi_lun* %4, i8* %5) #0 {
  %7 = alloca %struct.Scsi_Host*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.scsi_lun*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.scsi_lun* %4, %struct.scsi_lun** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load %struct.Scsi_Host*, %struct.Scsi_Host** %7, align 8
  %15 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load %struct.scsi_lun*, %struct.scsi_lun** %11, align 8
  %21 = load i8*, i8** %12, align 8
  %22 = call i32 @scsi_tgt_uspace_send_tsk_mgmt(i32 %16, i32 %17, i32 %18, i32 %19, %struct.scsi_lun* %20, i8* %21)
  store i32 %22, i32* %13, align 4
  %23 = load i32, i32* %13, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %6
  %26 = call i32 @eprintk(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %25, %6
  %28 = load i32, i32* %13, align 4
  ret i32 %28
}

declare dso_local i32 @scsi_tgt_uspace_send_tsk_mgmt(i32, i32, i32, i32, %struct.scsi_lun*, i8*) #1

declare dso_local i32 @eprintk(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
